[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/fight_data_creator/inspector/box_editor/BoxEditorItem.gd" type="Script" id=1]

[node name="BoxEditorItem" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 14.0

[node name="NameLabel" type="Label" parent="HBoxContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "Name:"

[node name="NameValue" type="Label" parent="HBoxContainer"]
margin_left = 46.0
margin_right = 46.0
margin_bottom = 14.0

[node name="HBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="SizeValue" type="Label" parent="HBoxContainer2"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Button" type="Button" parent="."]
margin_top = 36.0
margin_right = 50.0
margin_bottom = 56.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 0
text = "Edit"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
